codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_runtime_preview_values.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Configure Status Line                                                 
  Select which items to display in the status line.                     
                                                                        
  Type to search                                                        
                                                                        
› [x] Use theme colors      Apply colors from the active /theme         
  ───────────────────────                                               
  [x] model                 Current model name                          
  [x] current-dir           Current working directory                   
  [x] git-branch            Current Git branch (omitted when unavailabl…
  [ ] model-with-reasoning  Current model name with reasoning level     
  [ ] reasoning             Current reasoning level                     
  [ ] model-provider        Active model provider                       
↓                                                                       
  gpt-5-codex · ~/codex-rs · jif/statusline-preview                     
  space toggle · ←/→ reorder · enter save · esc cancel
